[gd_scene load_steps=19 format=3 uid="uid://qru8crm5m33e"]

[ext_resource type="Script" path="res://scenes/game_main.gd" id="1_yo1qq"]
[ext_resource type="PackedScene" uid="uid://bye553xtn1cos" path="res://board/game_board.tscn" id="2_16soi"]
[ext_resource type="PackedScene" uid="uid://dm45lotvlrgky" path="res://sub_scenes/player_info_pc.tscn" id="3_6wyfq"]
[ext_resource type="Texture2D" uid="uid://c3y0vihjkod10" path="res://assets/GUI.png" id="4_eymh2"]
[ext_resource type="Theme" uid="uid://qfdcqsau4pfe" path="res://new_theme.tres" id="5_rhjft"]
[ext_resource type="Script" path="res://scenes/MainMenu.gd" id="6_gxb20"]
[ext_resource type="Texture2D" uid="uid://dsaskhku12b4q" path="res://assets/rall.png" id="7_873j4"]
[ext_resource type="Texture2D" uid="uid://cr7csrukvscxm" path="res://assets/Spritesheet_UI_Flat_Select_01.png" id="8_xbwaq"]

[sub_resource type="Animation" id="Animation_ugmb1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NinePatchRect:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(141, 22)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NinePatchRect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(27, 3)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("NinePatchRect2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_oypcf"]
resource_name = "open"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NinePatchRect:size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(5, 5), Vector2(5, 22), Vector2(148, 22), Vector2(148, 22)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NinePatchRect:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(231, 29), Vector2(231, 3), Vector2(17, 3), Vector2(17, 3), Vector2(17, -88)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("NinePatchRect2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/path = NodePath("..:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ux3fb"]
_data = {
"RESET": SubResource("Animation_ugmb1"),
"open": SubResource("Animation_oypcf")
}

[sub_resource type="Animation" id="Animation_duaqq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NinePatchRect/BlackRall:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(30.8, 47.6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NinePatchRect/WhiteRall:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(76.8, 34)]
}

[sub_resource type="Animation" id="Animation_r1j3g"]
resource_name = "show"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NinePatchRect/BlackRall:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(39.2, 47.6), Vector2(39.2, 34), Vector2(39.2, 48.8), Vector2(39.2, 47.8), Vector2(39.2, 47), Vector2(39.2, 48.2), Vector2(39.2, 47.8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NinePatchRect/WhiteRall:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.5, 0.9, 1, 1.1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(190, 47.6), Vector2(190, 34), Vector2(190, 48.8), Vector2(190, 47.8), Vector2(190, 47), Vector2(190, 48.2), Vector2(190, 47.8)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gy75h"]
_data = {
"RESET": SubResource("Animation_duaqq"),
"show": SubResource("Animation_r1j3g")
}

[sub_resource type="Animation" id="Animation_qfhhj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MoveArea:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_f1r0r"]
resource_name = "ToMain"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MoveArea:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-99.2, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_u6qu7"]
resource_name = "ToOption"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MoveArea:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-99.2, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5tc5k"]
_data = {
"RESET": SubResource("Animation_qfhhj"),
"ToMain": SubResource("Animation_f1r0r"),
"ToOption": SubResource("Animation_u6qu7")
}

[node name="GameMain" type="Node2D"]
script = ExtResource("1_yo1qq")

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(640, 360)

[node name="GamePlay" type="Node2D" parent="."]
visible = false
position = Vector2(-2, 0)

[node name="GameBoard" parent="GamePlay" instance=ExtResource("2_16soi")]
position = Vector2(315, 8)

[node name="PlayerInfo01" parent="GamePlay" instance=ExtResource("3_6wyfq")]

[node name="PlayerInfo02" parent="GamePlay" instance=ExtResource("3_6wyfq")]
position = Vector2(1073, 0)

[node name="Timer" type="Timer" parent="."]

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(640, 800)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 719.0
offset_bottom = 1283.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="GameOver" type="Control" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 87.0
offset_top = -300.0
offset_right = 553.0
offset_bottom = -234.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOver" type="AnimationPlayer" parent="Control/GameOver"]
libraries = {
"": SubResource("AnimationLibrary_ux3fb")
}

[node name="NinePatchRect" type="NinePatchRect" parent="Control/GameOver"]
clip_contents = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 27.0
offset_top = 3.0
offset_right = 168.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)
texture = ExtResource("4_eymh2")
region_rect = Rect2(50, 98, 28, 28)
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 2
patch_margin_bottom = 2

[node name="Label" type="Label" parent="Control/GameOver/NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -108.5
offset_top = -7.0
offset_right = 334.5
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 20
text = "xxx님이 승리하셨습니다."
horizontal_alignment = 1
vertical_alignment = 1

[node name="NinePatchRect2" type="NinePatchRect" parent="Control/GameOver"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 112.0
offset_top = 63.0
offset_right = 188.0
offset_bottom = 103.0
scale = Vector2(3, 3)
texture = ExtResource("4_eymh2")
region_rect = Rect2(2, 34, 44, 44)
patch_margin_left = 17
patch_margin_top = 17
patch_margin_right = 15
patch_margin_bottom = 17
metadata/_edit_group_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Control/GameOver/NinePatchRect2"]
layout_direction = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 18.3333
offset_top = 13.6667
offset_right = 18.3333
offset_bottom = -0.333344
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)

[node name="GoMain" type="Button" parent="Control/GameOver/NinePatchRect2/VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2
theme = ExtResource("5_rhjft")
theme_override_font_sizes/font_size = 11
text = "메인으로"

[node name="MainMenu" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_gxb20")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/MainMenu"]
libraries = {
"": SubResource("AnimationLibrary_gy75h")
}

[node name="NinePatchRect" type="NinePatchRect" parent="Control/MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_right = -460.0
offset_bottom = -1139.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5, 5)
texture = ExtResource("4_eymh2")
region_rect = Rect2(0, 96, 48, 32)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="BlackRall" type="NinePatchRect" parent="Control/MainMenu/NinePatchRect"]
layout_mode = 0
offset_left = 30.8
offset_top = 47.6
offset_right = 59.8
offset_bottom = 76.6507
texture = ExtResource("7_873j4")
region_rect = Rect2(0, 0, 32, 32)

[node name="WhiteRall" type="NinePatchRect" parent="Control/MainMenu/NinePatchRect"]
layout_mode = 0
offset_left = 76.8
offset_top = 34.0
offset_right = 105.8
offset_bottom = 63.0412
texture = ExtResource("7_873j4")
region_rect = Rect2(32, 0, 32, 32)

[node name="MidArea" type="NinePatchRect" parent="Control/MainMenu/NinePatchRect"]
layout_mode = 0
offset_left = 72.0
offset_top = 27.2
offset_right = 182.0
offset_bottom = 142.2
texture = ExtResource("4_eymh2")
region_rect = Rect2(2, 34, 44, 44)
patch_margin_left = 15
patch_margin_top = 16
patch_margin_right = 14
patch_margin_bottom = 15

[node name="MenuArea" type="NinePatchRect" parent="Control/MainMenu/NinePatchRect/MidArea"]
clip_contents = true
layout_mode = 0
offset_left = 5.0
offset_top = 5.8
offset_right = 105.0
offset_bottom = 144.8

[node name="AnimationMenuMove" type="AnimationPlayer" parent="Control/MainMenu/NinePatchRect/MidArea/MenuArea"]
libraries = {
"": SubResource("AnimationLibrary_5tc5k")
}

[node name="MoveArea" type="Control" parent="Control/MainMenu/NinePatchRect/MidArea/MenuArea"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Menu" type="VBoxContainer" parent="Control/MainMenu/NinePatchRect/MidArea/MenuArea/MoveArea"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -8.0
offset_top = 3.0
offset_right = 148.0
offset_bottom = 158.0
grow_horizontal = 2
scale = Vector2(0.5, 0.5)
theme_override_constants/separation = 4

[node name="WITHFRIEND" type="Button" parent="Control/MainMenu/NinePatchRect/MidArea/MenuArea/MoveArea/Menu"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
theme = ExtResource("5_rhjft")
theme_override_font_sizes/font_size = 15
text = "WITHFRIEND"

[node name="AIBATTLE" type="Button" parent="Control/MainMenu/NinePatchRect/MidArea/MenuArea/MoveArea/Menu"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
theme = ExtResource("5_rhjft")
theme_override_font_sizes/font_size = 15
text = "AIBATTLE"

[node name="ONLINE" type="Button" parent="Control/MainMenu/NinePatchRect/MidArea/MenuArea/MoveArea/Menu"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
theme = ExtResource("5_rhjft")
theme_override_font_sizes/font_size = 15
text = "ONLINE"

[node name="OPTION" type="Button" parent="Control/MainMenu/NinePatchRect/MidArea/MenuArea/MoveArea/Menu"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
theme = ExtResource("5_rhjft")
theme_override_font_sizes/font_size = 15
text = "OPTION"

[node name="HELP" type="Button" parent="Control/MainMenu/NinePatchRect/MidArea/MenuArea/MoveArea/Menu"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
theme = ExtResource("5_rhjft")
theme_override_font_sizes/font_size = 15
text = "HELP"

[node name="Option" type="VBoxContainer" parent="Control/MainMenu/NinePatchRect/MidArea/MenuArea/MoveArea"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 89.8
offset_top = 3.0
offset_right = 251.8
offset_bottom = 158.0
grow_horizontal = 2
scale = Vector2(0.5, 0.5)
theme_override_constants/separation = 6

[node name="Music" type="HBoxContainer" parent="Control/MainMenu/NinePatchRect/MidArea/MenuArea/MoveArea/Option"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Label" type="Label" parent="Control/MainMenu/NinePatchRect/MidArea/MenuArea/MoveArea/Option/Music"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "MUSIC"

[node name="MusicHSlider" type="HSlider" parent="Control/MainMenu/NinePatchRect/MidArea/MenuArea/MoveArea/Option/Music"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
theme = ExtResource("5_rhjft")
max_value = 1.0
step = 0.001

[node name="SFX" type="HBoxContainer" parent="Control/MainMenu/NinePatchRect/MidArea/MenuArea/MoveArea/Option"]
layout_mode = 2
theme_override_constants/separation = 36

[node name="Label" type="Label" parent="Control/MainMenu/NinePatchRect/MidArea/MenuArea/MoveArea/Option/SFX"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
text = "SFX"

[node name="SFXHSlider" type="HSlider" parent="Control/MainMenu/NinePatchRect/MidArea/MenuArea/MoveArea/Option/SFX"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
theme = ExtResource("5_rhjft")
max_value = 1.0
step = 0.001

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/MainMenu/NinePatchRect/MidArea/MenuArea/MoveArea/Option"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/MainMenu/NinePatchRect/MidArea/MenuArea/MoveArea/Option/HBoxContainer2"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "LANG"

[node name="OptionButton" type="OptionButton" parent="Control/MainMenu/NinePatchRect/MidArea/MenuArea/MoveArea/Option/HBoxContainer2"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
theme = ExtResource("5_rhjft")

[node name="BACK" type="Button" parent="Control/MainMenu/NinePatchRect/MidArea/MenuArea/MoveArea/Option"]
custom_minimum_size = Vector2(0, 20.36)
layout_mode = 2
theme = ExtResource("5_rhjft")
theme_override_font_sizes/font_size = 15
text = "BACK"

[node name="PopupGameRule" type="NinePatchRect" parent="Control/MainMenu/NinePatchRect"]
visible = false
layout_mode = 0
offset_left = 85.0
offset_top = 27.2
offset_right = 167.0
offset_bottom = 139.2
texture = ExtResource("4_eymh2")
region_rect = Rect2(2, 34, 44, 44)
patch_margin_left = 15
patch_margin_top = 16
patch_margin_right = 14
patch_margin_bottom = 15

[node name="MenuArea" type="NinePatchRect" parent="Control/MainMenu/NinePatchRect/PopupGameRule"]
clip_contents = true
layout_mode = 0
offset_left = 5.6
offset_top = 2.40002
offset_right = 75.6
offset_bottom = 118.4

[node name="MoveArea" type="Control" parent="Control/MainMenu/NinePatchRect/PopupGameRule/MenuArea"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Menu" type="VBoxContainer" parent="Control/MainMenu/NinePatchRect/PopupGameRule/MenuArea/MoveArea"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -19.0
offset_top = 3.0
offset_right = 120.0
offset_bottom = 161.0
grow_horizontal = 2
scale = Vector2(0.5, 0.5)
theme_override_constants/separation = 7

[node name="GameRule" type="Label" parent="Control/MainMenu/NinePatchRect/PopupGameRule/MenuArea/MoveArea/Menu"]
layout_mode = 2
text = "GAMERULE"

[node name="OptionGameRule" type="OptionButton" parent="Control/MainMenu/NinePatchRect/PopupGameRule/MenuArea/MoveArea/Menu"]
layout_mode = 2
item_count = 1
selected = 0
popup/item_0/text = "FREESTYLE"
popup/item_0/id = 0

[node name="SctDoll" type="Label" parent="Control/MainMenu/NinePatchRect/PopupGameRule/MenuArea/MoveArea/Menu"]
layout_mode = 2
text = "SELECTDOLL"

[node name="OptionDoll" type="OptionButton" parent="Control/MainMenu/NinePatchRect/PopupGameRule/MenuArea/MoveArea/Menu"]
layout_mode = 2
item_count = 2
selected = 0
popup/item_0/text = "BLOCK"
popup/item_0/id = 0
popup/item_1/text = "WHILE"
popup/item_1/id = 1

[node name="BtnStart" type="Button" parent="Control/MainMenu/NinePatchRect/PopupGameRule/MenuArea/MoveArea/Menu"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme = ExtResource("5_rhjft")
theme_override_font_sizes/font_size = 15
text = "START"

[node name="BtnBack" type="Button" parent="Control/MainMenu/NinePatchRect/PopupGameRule/MenuArea/MoveArea/Menu"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme = ExtResource("5_rhjft")
theme_override_font_sizes/font_size = 15
text = "BACK"

[node name="BottomArea" type="NinePatchRect" parent="Control/MainMenu/NinePatchRect"]
visible = false
layout_mode = 0
offset_left = 16.0
offset_top = 174.0
offset_right = 127.0
offset_bottom = 244.0
texture = ExtResource("4_eymh2")
region_rect = Rect2(82, 98, 29, 29)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MainMenu/NinePatchRect/BottomArea"]
layout_mode = 0
offset_left = 5.6
offset_top = 8.80009
offset_right = 104.6
offset_bottom = 58.8001

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MainMenu/NinePatchRect/BottomArea/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/MainMenu/NinePatchRect/BottomArea/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "WIN"

[node name="Label2" type="Label" parent="Control/MainMenu/NinePatchRect/BottomArea/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
text = "0"
horizontal_alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/MainMenu/NinePatchRect/BottomArea/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/MainMenu/NinePatchRect/BottomArea/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "LOSE"

[node name="Label2" type="Label" parent="Control/MainMenu/NinePatchRect/BottomArea/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
text = "0"
horizontal_alignment = 2

[node name="Title" type="Label" parent="Control/MainMenu/NinePatchRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -47.5
offset_top = 5.4
offset_right = 46.5
offset_bottom = 28.4
grow_horizontal = 2
text = "PLAYOMOK"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextEdit" type="TextEdit" parent="Control/MainMenu/NinePatchRect"]
layout_mode = 0
offset_left = 3.4
offset_top = 219.2
offset_right = 137.4
offset_bottom = 238.2
theme_override_font_sizes/font_size = 9

[node name="Login" type="Button" parent="Control/MainMenu/NinePatchRect"]
layout_mode = 0
offset_left = 34.0
offset_top = 232.6
offset_right = 104.0
offset_bottom = 253.6
theme_override_font_sizes/font_size = 9
text = "login"

[node name="Matching" type="Panel" parent="Control/MainMenu/NinePatchRect"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control/MainMenu/NinePatchRect/Matching"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "MATCHING"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-804.5, 1043.13)
scale = Vector2(5.79688, 5.79688)
texture = ExtResource("8_xbwaq")

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="BoardPieceClick" from="GamePlay/GameBoard" to="." method="_on_game_board_board_piece_click"]
[connection signal="PlayerNextTurn" from="GamePlay/GameBoard" to="." method="_on_game_board_player_next_turn"]
[connection signal="PlayerWin" from="GamePlay/GameBoard" to="." method="_on_game_board_player_win"]
[connection signal="SetRall" from="GamePlay/PlayerInfo01" to="." method="_on_player_info_set_rall"]
[connection signal="Timeout" from="GamePlay/PlayerInfo01" to="." method="_on_player_info_timeout"]
[connection signal="SetRall" from="GamePlay/PlayerInfo02" to="." method="_on_player_info_set_rall"]
[connection signal="Timeout" from="GamePlay/PlayerInfo02" to="." method="_on_player_info_timeout"]
[connection signal="pressed" from="Control/GameOver/NinePatchRect2/VBoxContainer/GoMain" to="." method="_on_go_main_pressed"]
[connection signal="pressed" from="Control/MainMenu/NinePatchRect/MidArea/MenuArea/MoveArea/Menu/WITHFRIEND" to="." method="_on_withfriend_pressed"]
[connection signal="pressed" from="Control/MainMenu/NinePatchRect/MidArea/MenuArea/MoveArea/Menu/AIBATTLE" to="." method="_on_aibattle_pressed"]
[connection signal="pressed" from="Control/MainMenu/NinePatchRect/MidArea/MenuArea/MoveArea/Menu/ONLINE" to="Control/MainMenu" method="_on_online_pressed"]
[connection signal="pressed" from="Control/MainMenu/NinePatchRect/MidArea/MenuArea/MoveArea/Menu/OPTION" to="Control/MainMenu" method="_on_option_pressed"]
[connection signal="pressed" from="Control/MainMenu/NinePatchRect/MidArea/MenuArea/MoveArea/Menu/HELP" to="Control/MainMenu" method="_on_option_pressed"]
[connection signal="drag_ended" from="Control/MainMenu/NinePatchRect/MidArea/MenuArea/MoveArea/Option/Music/MusicHSlider" to="Control/MainMenu" method="_on_music_h_slider_drag_ended"]
[connection signal="value_changed" from="Control/MainMenu/NinePatchRect/MidArea/MenuArea/MoveArea/Option/Music/MusicHSlider" to="Control/MainMenu" method="_on_music_h_slider_value_changed"]
[connection signal="drag_ended" from="Control/MainMenu/NinePatchRect/MidArea/MenuArea/MoveArea/Option/SFX/SFXHSlider" to="Control/MainMenu" method="_on_sfxh_slider_drag_ended"]
[connection signal="value_changed" from="Control/MainMenu/NinePatchRect/MidArea/MenuArea/MoveArea/Option/SFX/SFXHSlider" to="Control/MainMenu" method="_on_sfxh_slider_value_changed"]
[connection signal="item_selected" from="Control/MainMenu/NinePatchRect/MidArea/MenuArea/MoveArea/Option/HBoxContainer2/OptionButton" to="Control/MainMenu" method="_on_option_button_item_selected"]
[connection signal="pressed" from="Control/MainMenu/NinePatchRect/MidArea/MenuArea/MoveArea/Option/BACK" to="Control/MainMenu" method="_on_back_pressed"]
[connection signal="pressed" from="Control/MainMenu/NinePatchRect/PopupGameRule/MenuArea/MoveArea/Menu/BtnStart" to="." method="OnAISelect"]
[connection signal="pressed" from="Control/MainMenu/NinePatchRect/PopupGameRule/MenuArea/MoveArea/Menu/BtnBack" to="." method="_on_btn_back_pressed"]
[connection signal="pressed" from="Control/MainMenu/NinePatchRect/Login" to="Control/MainMenu" method="_on_login_pressed"]
